--- a/frontend/src/app/components/templat/nav/nav.component.html
+++ b/frontend/src/app/components/templat/nav/nav.component.html
@@ -16,7 +16,9 @@
             </a>
         </mat-nav-list>
     </mat-sidenav>
+    
     <mat-sidenav-content class="content">
-        <router-outlet></router-outlet>
+        <app-home></app-home>
     </mat-sidenav-content>
+
 </mat-sidenav-container>
