--- a/frontend/src/app/components/templat/header/header.component.html
+++ b/frontend/src/app/components/templat/header/header.component.html
@@ -12,7 +12,7 @@
       <i class="material-icons">       <!--  Add icone -->
        home
       </i>
-      Aplicacao Crud                   <!--  Add titulo -->
+      Inicio                   <!--  Add titulo -->
     </a>
     </span>
 </mat-toolbar>
