--- a/frontend/src/app/components/templat/nav/nav.component.html
+++ b/frontend/src/app/components/templat/nav/nav.component.html
@@ -18,7 +18,7 @@
     </mat-sidenav>
     
     <mat-sidenav-content class="content">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 
 </mat-sidenav-container>
