Navegacao de components

--- a/frontend/src/app/components/templat/header/header.component.html
+++ b/frontend/src/app/components/templat/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4">  <!-- elevacao eixo z, sombra cabeçario  -->
   <span>
-    <a>
+    <a routerLink="/">
       <img class="logo" src="assets/img/logo.PNG" alt="logo">
     </a>
   </span>           <!--  class="logo" e header pra referenciar  -->
@@ -9,7 +9,7 @@
 
   <span class="title-group">
     <a>
-      <i class="material-icons">       <!--  Add icone -->
+      <i class="material-icons" routerLink="/">       <!--  Add icone -->
        home
       </i>
       Inicio                   <!--  Add titulo -->
