--- a/frontend/src/app/components/templat/footer/footer.component.html
+++ b/frontend/src/app/components/templat/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="footer">
     <span> Desenvolvido por 
-        <i class="material-icons red">  
+        <i class="material-icons" appRed>  
             favorite
         </i>
          Leandro</span>           
