Diretiva estrutural For

--- a/frontend/src/app/components/templat/footer/footer.component.html
+++ b/frontend/src/app/components/templat/footer/footer.component.html
@@ -3,6 +3,7 @@
         <i class="material-icons" appRed>  
             favorite
         </i>
-         Leandro</span>           
+         Leandro
+        </span> 
 </mat-toolbar>
 
