Componente Obter Produto

--- a/frontend/src/app/components/product/product-create/product-create.component.css
+++ b/frontend/src/app/components/product/product-create/product-create.component.css
@@ -4,7 +4,6 @@ form {
     margin-top: 20px;
 }
 
-
 button {
-    margin: 20px 15px 0px 0px;
+    margin: 20px 15px 0px 0px;  /* topo, direita, baixo e esquerda */
 }
