--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,1 +1,30 @@
-<p>product-read works!</p>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="products">
+
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">                 <!-- Precisa ser igual aos nomes do displayedColumns  -->
+        <th mat-header-cell *matHeaderCellDef >Name</th>       <!-- Nome cabeçario da coluna  -->
+        <td mat-cell *matCellDef="let variavel">{{variavel.name}}</td>                  <!-- Conteudo da coluna  -->
+   <!-- <td mat-cell *matCellDef="let row">Bla {{row.name}}</td>               Escrever bla: antes do item  -->
+      </ng-container>
+  
+  
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">        
+        <th mat-header-cell *matHeaderCellDef >price</th>
+        <td mat-cell *matCellDef="let row">{{row.price|currency: 'BRL'}}</td>
+      </ng-container>
+  
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>            <!-- Quais colunas serao exibidas -->
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>      <!-- Dados das colunas -->
+    </table>
+
+  </div>
+  
