--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -20,7 +20,25 @@
         <th mat-header-cell *matHeaderCellDef >price</th>
         <td mat-cell *matCellDef="let row">{{row.price|currency: 'BRL'}}</td>
       </ng-container>
-  
+
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="" class="edit">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a routerLink="" class="delete">
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
+
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>            <!-- Quais colunas serao exibidas -->
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>      <!-- Dados das colunas -->
