Atualizando titulos (header)

--- a/frontend/src/app/components/templat/header/header.component.html
+++ b/frontend/src/app/components/templat/header/header.component.html
@@ -8,13 +8,13 @@
 
 
   <span class="title-group">
-    <a>
-      <i class="material-icons" routerLink="/">       <!--  Add icone -->
-       home
-      </i>
-      Inicio                   <!--  Add titulo -->
+    <a routerLink="{{ routeUrl }}">
+        <i class="material-icons">
+            {{ icon }}
+        </i>
+        {{ title }}
     </a>
-    </span>
+</span>
 </mat-toolbar>
 
 
